@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 31-07-2004 fixed: iTunes Smart Playlists
   - 30-07-2004 changed: iTunes DAAP performance improvements
   - 28-07-2004 added: iTunes DAAP support
   - 26-07-2004 fixed: Some images in PM skin did not work properly.  Submitting them again.
